--- a/src/app/modules/chat-panel/chat-panel-body/cp/chat-content-panel/chat-content-panel.component.html
+++ b/src/app/modules/chat-panel/chat-panel-body/cp/chat-content-panel/chat-content-panel.component.html
@@ -1,6 +1,5 @@
-<div style="height:200px" id="Scrollcontiner">
-    <div class="container" id="ScrollChat" style="height: 100vh; overflow-y: auto;">
-
+<div style="height: 200px;" id="Scrollcontiner">
+    <div class="container" id="ScrollChat" style="max-height: 100vh; overflow-y: auto;">
 
         <!-- Message Day Start -->
         <div class="message-day" id="ScrollBase">
@@ -44,7 +43,7 @@
         </div>
         <!-- Message Day End -->
         <!-- Scroll to finish -->
-        <div class="chat-finished" id="chat-finished" style="height: 100px;"></div>
+        <div class="chat-finished" id="chat-finished" style="height: 10px;"></div>
         <!-- Message Day Start -->
     </div>
 
