--- a/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
+++ b/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
@@ -803,7 +803,7 @@
                         <div class="modal-content">
                         <div class="modal-header">
                             
-                            <div class=" p-2">
+                            <div class="col-12">  <!--Cambio de p-2 a col-12 para el ancho del buscar-->
 
                                     <h5 class="modal-title" id="chatActivosLabel">Chats Activos</h5>
                                     <br>
