--- a/src/app/demo/view/dashboard.component.html
+++ b/src/app/demo/view/dashboard.component.html
@@ -129,6 +129,21 @@
             </div> -->
         </div>
     </div>
+    
+<div class="login-body" [ngClass]="">
+    <!-- Contenido existente -->
+    <p-dialog header="Autorización de Uso de Datos Personales" [(visible)]="displayModal" [modal]="true" [style]="{'width': '50vw', 'text-align': 'center'}" class="modal-autorizacion">
+
+      <div class="content">
+        <p>Para continuar, por favor autoriza el uso de tus datos personales según nuestra política de privacidad.</p>
+        <p>Al dar click en autorizo, acepta que nuestros patrocinadores tengan acceso al nombre de su empresa</p>
+      </div>
+      <p-footer>
+        <button type="button" pButton label="Autorizo" (click)="handleAuthorization(true)" class="ui-button-success"></button>
+        <button type="button" pButton label="No Autorizo" (click)="handleAuthorization(false)" class="ui-button-secondary"></button>
+      </p-footer>
+    </p-dialog>
+  </div>
     <!-- Write your comments here 
     <div class="col-12 lg:col-6">
         <div class="grid">
