--- a/src/app/demo/view/acercade.component.html
+++ b/src/app/demo/view/acercade.component.html
@@ -9,10 +9,11 @@
                             <h5>INFO</h5>
                         </div>
                         <h6>Acerca del evento</h6>
-                        <p style="text-align: justify;">El 2° Congreso Internacional de Hidrógeno «Innovación, transición y vida» se llevará a cabo el 20 y 21 de Abril de 2023 en Bogotá. 
-                            Es un evento presencial de 2 días en el que se reunirán los principales actores del hidrógeno en Colombia y América Latina, 
-                            donde se abordarán las principales temáticas del desarrollo del H2 y sus derivados, tales como escenarios de demanda, 
-                            tecnologías de producción, proyectos y pilotos y los distintos marcos políticos y regulatorios pioneros en la región.</p><br />
+                        <p style="text-align: justify;">Es tiempo de dar el siguiente paso en el desarrollo del ecosistema del Hidrógeno y empezar a materializar todos nuestros objetivos. 
+                            El tercer Congreso Internacional de Hidrógeno – del sueño a la realidad, será un espacio de relacionamiento y construcción 
+                            conjunta entre tomadores de decisiones y expertos del sector público, empresarial, financiero y académico nacional e internacional. 
+                            Tres días donde se presentará el avance de Colombia, la región y el mundo a través de apasionantes conferencias magistrales, paneles de discusión, 
+                            muestra comercial y actividades de networking.</p><br />
                             <div class="grid link">
                                 <div class="col-9">
                                     <a href="https://hidrogenocolombia.com" target="_blank">
