--- a/src/app/demo/view/dashboard.component.html
+++ b/src/app/demo/view/dashboard.component.html
@@ -132,15 +132,25 @@
     
 <div class="login-body" [ngClass]="">
     <!-- Contenido existente -->
-    <p-dialog header="Autorización de Uso de Datos Personales" [(visible)]="displayModal" [modal]="true" [style]="{'width': '50vw', 'text-align': 'center'}" class="modal-autorizacion">
+    <p-dialog header="Autorización de Uso de Datos Personales" [(visible)]="displayModal" [modal]="true" [style]="{'width': '50vw', 'text-align': 'left'}" class="modal-autorizacion">
 
       <div class="content">
-        <p>Para continuar, por favor autoriza el uso de tus datos personales según nuestra política de privacidad.</p>
-        <p>Al dar click en autorizo, acepta que nuestros patrocinadores tengan acceso al nombre de su empresa</p>
+        <p>En mi calidad de titular de datos personales, al aceptar de manera voluntaria este formulario, autorizo a los organizadores 
+            del evento 3er Congreso Internacional de Hidrógeno a utilizar la información que a continuación suministraré con el propósito 
+            de que sea usada para el desarrollo de la presente actividad, establecer contacto para envío de memorias o información 
+            pertinente al evento, entrega de certificados, adelantar la promoción y publicidad relacionada con productos y servicios 
+            que ofrecen las asociaciones, promoción y publicidad de la presente actividad y actividades futuras.
+
+            Conozco la Política de Tratamiento y Protección de Datos Personales la cual puede ser consultada en el 
+            
+            <b><a href= "https://www.hidrogenocolombia.com/wp-content/uploads/2023/07/Politica-de-proteccion-de-datos-V-27042023.pdf">Siguiente enlace</a></b>
+        </p>
+           
       </div>
       <p-footer>
+        <button type="button" pButton label="No" (click)="handleAuthorization(false)" class="ui-button-secondary"></button>
         <button type="button" pButton label="Autorizo" (click)="handleAuthorization(true)" class="ui-button-success"></button>
-        <button type="button" pButton label="No Autorizo" (click)="handleAuthorization(false)" class="ui-button-secondary"></button>
+        
       </p-footer>
     </p-dialog>
   </div>
