--- a/src/app/demo/view/agenda.component.html
+++ b/src/app/demo/view/agenda.component.html
@@ -1,7 +1,10 @@
 <div class="grid p-fluid">
     <div class="col-12">
+		<div class="text-center" style="color:#00A79D;">
+			<h6><a href="#/pages/agenda/1" style="color:#00A79D;">Abril 9</a>  |  <a href="#/pages/agenda/2" style="color:#00A79D;">Abril 10</a>  |  <a href="#/pages/agenda/3" style="color:#00A79D;">Abril 11</a></h6>
+		</div>
         <div class="card">
-            <h5>Dia 1 - Abril 20</h5>
+            <h5>{{dia}}</h5>
             <p-table [value]="listaAgenda1" sortMode="single">
 				<ng-template pTemplate="body" let-agenda let-rowIndex="rowIndex">
 					<tr>
@@ -12,7 +15,7 @@
 						</td>
 						<td>
 							<a (click)="irAPaginaDestino(agenda.eve_id)">
-								<div class="text-green-500" [innerHTML]><b>{{agenda.eve_tipo}}</b></div>
+								<div  style="color:#00A79D;" [innerHTML]><b>{{agenda.eve_tipo}}</b></div>
 								{{agenda.eve_descripcion}}
 							</a>
 						</td>
@@ -20,7 +23,7 @@
 				</ng-template>
 			</p-table>          
         </div>
-        <div class="card">
+<!--         <div class="card">
             <h5>Dia 2 - Abril 21</h5>
             <p-table [value]="listaAgenda2" sortMode="single" >
 				<ng-template pTemplate="body" let-agenda let-rowIndex="rowIndex">
@@ -39,6 +42,6 @@
 					</tr>
 				</ng-template>
 			</p-table>          
-        </div>
+        </div> -->
     </div>
 </div>
