--- a/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.css
+++ b/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.css
@@ -19,8 +19,14 @@
   }
 
   .chat-content {
-    max-height: 600px; width: 100%;
+    height: 600px; width: 90%;
   }
+
+  .chat-content-patrocinador {
+    height: 500px; width: 90%;
+    margin-left: 25px
+  }
+
 
   @media (max-width: 767.98px) {
     .input-group.custom-size {
@@ -43,4 +49,12 @@
   .form-control.search {
     width: 100%; /* Ocupa el ancho completo del div contenedor */
   }
+}
+.cdk-overlay-container {
+  z-index: 9999 !important;
+}
+
+.date-picker-modal .mat-form-field {
+  max-width: 300px; /* or whatever size you want */
+  width: 100%;
 }
