--- a/src/app/demo/view/sponsors.component.html
+++ b/src/app/demo/view/sponsors.component.html
@@ -7,9 +7,9 @@
                 </div>
             </div>			
 			<div class="store-cards-container" >
-				<div class="grid store-cards">
+				<div class="grid store-cards" >
 					<div class="col-6 lg:col-2 md:col-2" *ngFor="let sponsor of listaSponsors0">
-                        <div class="store-card">
+                        <div class="store-card" (click)="irAPaginaDestino(sponsor.spo_id)">
 							<div class="store-card-image">
 								<img src="assets/media/sponsors/{{sponsor.spo_logo}}" alt="mirage-layout" />
 							</div>	
@@ -29,7 +29,7 @@
 			<div class="store-cards-container" >
 				<div class="grid store-cards">
 					<div class="col-6 lg:col-2 md:col-2" *ngFor="let sponsor of listaSponsorsoro">
-                        <div class="store-card">
+                        <div class="store-card" (click)="irAPaginaDestino(sponsor.spo_id)">
 							<div class="store-card-image">
 								<img src="assets/media/sponsors/{{sponsor.spo_logo}}" alt="mirage-layout" />
 							</div>	
@@ -49,7 +49,7 @@
 			<div class="store-cards-container" >
 				<div class="grid store-cards">
 					<div class="col-6 lg:col-2 md:col-2" *ngFor="let sponsor of listaSponsors2">
-                        <div class="store-card">
+                        <div class="store-card" (click)="irAPaginaDestino(sponsor.spo_id)">
 							<div class="store-card-image">
 								<img src="assets/media/sponsors/{{sponsor.spo_logo}}" alt="mirage-layout" />
 							</div>	
@@ -69,7 +69,7 @@
 			<div class="store-cards-container" >
 				<div class="grid store-cards">
 					<div class="col-6 lg:col-2 md:col-2" *ngFor="let sponsor of listaSponsors1">
-                        <div class="store-card">
+                        <div class="store-card" (click)="irAPaginaDestino(sponsor.spo_id)">
 							<div class="store-card-image">
 								<img src="assets/media/sponsors/{{sponsor.spo_logo}}" alt="mirage-layout" />
 							</div>	
@@ -89,7 +89,7 @@
 			<div class="store-cards-container" >
 				<div class="grid store-cards">
 					<div class="col-6 lg:col-2 md:col-2" *ngFor="let sponsor of listaSponsors3">
-                        <div class="store-card">
+                        <div class="store-card" (click)="irAPaginaDestino(sponsor.spo_id)">
 							<div class="store-card-image">
 								<img src="assets/media/sponsors/{{sponsor.spo_logo}}" alt="mirage-layout" />
 							</div>	
@@ -109,7 +109,7 @@
 			<div class="store-cards-container" >
 				<div class="grid store-cards">
 					<div class="col-6 lg:col-2 md:col-2" *ngFor="let sponsor of listaSponsorsapoya">
-                        <div class="store-card">
+                        <div class="store-card" (click)="irAPaginaDestino(sponsor.spo_id)">
 							<div class="store-card-image">
 								<img src="assets/media/sponsors/{{sponsor.spo_logo}}" alt="mirage-layout" />
 							</div>	
